--- a/src/css/sb-admin-2.css
+++ b/src/css/sb-admin-2.css
@@ -10584,21 +10584,21 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("../img/logo.png");
   background-position: center;
-  background-size: cover;
+  background-size: auto;
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("../img/logo.png");
   background-position: center;
-  background-size: cover;
+  background-size: auto;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("../img/logo.png");
   background-position: center;
-  background-size: cover;
+  background-size: auto;
 }
 
 form.user .custom-checkbox.small label {
